weighted average motion filter added

--- a/src/ee4308_turtle/config/turtle.yaml
+++ b/src/ee4308_turtle/config/turtle.yaml
@@ -10,11 +10,11 @@ main_iter_rate: 25
 
 # motion
 verbose_motion: true
-use_internal_odom: true
+use_internal_odom: false
 axle_track: 0.16
 wheel_radius: 0.033
-weight_odom_v: 0.5
-weight_odom_w: 0.5
+weight_odom_v: 0.95
+weight_odom_w: 0.05
 straight_thresh: 0.05
 motion_iter_rate: 50
 
