--- a/src/ee4308_turtle/config/turtle.yaml
+++ b/src/ee4308_turtle/config/turtle.yaml
@@ -1,6 +1,6 @@
 # main
-close_enough: 0.1
-target_dt: 0.04 # this (s) should be slower than or equals to main_iter_rate (Hz)
+close_enough: 0.0 ##0.1 default
+target_dt: 10.0 # this (s) should be slower than or equals to main_iter_rate (Hz). Default 0.04
 average_speed: 0.2
 cell_size: 0.05
 inflation_radius: 0.22
@@ -9,8 +9,8 @@ log_odds_cap: 20
 main_iter_rate: 25 
 
 # motion
-verbose_motion: true
-use_internal_odom: false
+verbose_motion: false
+use_internal_odom: true
 axle_track: 0.16
 wheel_radius: 0.033
 weight_odom_v: 0.95
@@ -19,16 +19,22 @@ straight_thresh: 0.05
 motion_iter_rate: 50
 
 # move
-enable_move: false
+enable_move: true
 verbose_move: true
-Kp_lin: 1.0
+Kp_lin: 3.2
 Ki_lin: 0.0
-Kd_lin: 0.0
+Kd_lin: 0.15
 max_lin_vel: 0.22 # max is 0.22
-max_lin_acc: 0.5
+max_lin_acc: 1.0 ##default 1
 Kp_ang: 1.0
 Ki_ang: 0.0
 Kd_ang: 0.0
 max_ang_vel: 2.84 # max is 2.84
-max_ang_acc: 2
+max_ang_acc: 4 ##default 2
 move_iter_rate: 25
+coupling_func: 'cos' ##So far, options are cos and quadratic. 
+
+#tuning
+tune_mode: true
+tune_lin: false ##if tune_mode is true, ensure that only tune_lin OR tune_ang is true. This is because we tune the PIDs one at a time 
+tune_ang: true
